--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "homepage": "https://goitacademy.github.io/parcel-project-template",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel-project-template/"
+    "build": "parcel build src/*.html --public-url /parcel-project-template/",
+    "qwe": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,8 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
+    "@vimeo/player": "^2.16.2",
+    "lodash.throttle": "^4.1.1",
     "simplelightbox": "^2.10.1"
   }
 }
