--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /parcel-project-template/",
-    "qwe": "node app.js"
+    "qwe": "node app.js",
+    "start": "node "
   },
   "repository": {
     "type": "git",
